# BenchSuite

./: .gitignore  Android.mk  Application.mk  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build_app.yml  build_app_debug.yml  build_app_release.yml  build_libs.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/proto/: bench_commands.proto  bridge.proto  config.proto  results.proto
app/src/main/res/drawable/: account_box_24px.xml  arrow_back_24px.xml  arrow_downward_24px.xml  arrow_upward_24px.xml  check_24px.xml  chevron_right_24px.xml  close_24px.xml  colors_24px.xml  contrast_24px.xml  info_24px.xml  list_24px.xml  palette_24px.xml  person_24px.xml  play_arrow_24px.xml  settings_24px.xml  (+2 more)
app/src/main/rust/: Cargo.toml  build.rs
app/src/main/rust/src/: bridge.rs  engine.rs  lib.rs  ring_buffer.rs  scoring.rs
app/src/main/rust/src/benchmarks/: cpu.rs  io.rs  ipc.rs  memory.rs  mod.rs  network.rs  scheduler.rs  timer.rs
docs/spec/: README.md  architecture.md  backend-leaderboard.md  benchmark-suite.md  jni-bridge.md  overview.md  platform-constraints.md  scoring-system.md  ui-ux.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: callbench.c  hackbench.c  pipebench.c
supabase/: config.toml  seed.sql
supabase/functions/upload-run/: deno.json  index.ts
supabase/migrations/: 20260424000200_schemas.sql  20260424000300_types.sql  20260424000400_tables.sql  20260424000500_functions.sql  20260424000600_rls.sql  20260424000700_storage.sql
(+72 files in other folders)
