[package]
name    = "benchsuite"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni         = { version = "0.22", features = ["invocation"] }
tokio       = { version = "1",    features = ["full"] }
prost       = "0.14"
once_cell   = "1"
parking_lot = "0.12"
libc        = "0.2"
nix         = { version = "0.29", features = ["sched", "mman", "fs", "net", "poll", "time", "pthread"] }
rand        = "0.9"

[build-dependencies]
prost-build          = "0.14"
protoc-bin-vendored  = "3"

[profile.release]
strip         = true   # Remove symbols from binary
lto           = true   # Link-time optimization for smaller binary
codegen-units = 1      # Better optimization
